--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,13 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    # 1. Add MongoDB Service Container
+    services:
+      mongodb:
+        image: mongo:5.0
+        ports:
+          - 27017:27017
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,4 +30,11 @@ jobs:
         run: cd backend && npm install
 
       - name: Run backend tests
+        # 2. Add Environment Variables here
+        env:
+          # Point to the service container (localhost:27017)
+          # No username/password needed for the default CI mongo container
+          MONGODB_TEST_URI: mongodb://localhost:27017/LibraryDB_test
+          JWT_SECRET: "ci_test_secret"
+          PORT: 9000
         run: cd backend && CI=true npm test
